<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="nav_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_bookmarks"
      android:icon="@drawable/ic_menu_bookmark"
      android:title="@string/action_bookmarks" />
    <item
      android:id="@+id/nav_teachers"
      android:icon="@drawable/ic_menu_teacher"
      android:title="@string/action_teacher" />
    <item
      android:id="@+id/nav_student"
      android:icon="@drawable/ic_menu_student"
      android:title="@string/action_student" />
    <item
      android:id="@+id/nav_group"
      android:icon="@drawable/ic_menu_groups"
      android:title="@string/action_group" />
  </group>

  <group
    android:id="@+id/menu_bottom"
    android:checkableBehavior="single">
    <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/ic_menu_settings"
      android:title="@string/action_settings" />
    <item
      android:id="@+id/nav_about"
      android:icon="@drawable/ic_menu_about"
      android:title="@string/action_about" />
  </group>

</menu>
